Use Android-compatible JSON and file APIs